Lazy commit-all
Sorry

--- a/index.html
+++ b/index.html
@@ -2,20 +2,84 @@
 <!--[if lt IE 9]> <html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/main.css">
-	<!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+    <meta charset="utf-8">
+    <title>willdawson.me</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/main.css">
+    <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head>
 <body>
-	
-	<!-- Content goes here -->
+    <h1 class="page-title">Will Dawson</h1>
+    <div class="page-wrap">
+        <header>
+            <a class="logo" href="/">willdawson.me</a>
+            <a class="btn-me" href=""><span class="icon-thin-heart-o"></span></a>
+        </header>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
-	<script src="js/main.js"></script>
-	
+        <main>
+            <section>
+                <h1>
+                    <div class="pre-title lines">
+                        <span class="icon-thin-dribbble"></span>
+                    </div>
+                    Shots from Dribbble
+                </h1>
+
+                <div class="portfolio-grid">
+                    <div class="image">
+                        <a href="#"><img src="img/1.png"alt="image"></a>
+                    </div>
+
+                    <div class="image">
+                        <a href="#"><img src="img/2.jpg"alt="image"></a>
+                    </div>
+
+                    <div class="image">
+                        <a href="#"><img src="img/3.jpg" alt="image"></a>
+                    </div>
+
+                    <div class="image">
+                        <a href="#"><img src="img/4.png" alt="image"></a>
+                    </div>
+                </div>
+
+                <p class="more">More from <a href="#">Dribbble</a></p>
+            </section>
+
+            <section>
+                <h1>
+                    <div class="pre-title lines">
+                        <span class="icon-thin-bookmark"></span>
+                    </div>
+                    From the Archives
+                </h1>
+            </section>
+        </main>
+    </div>
+
+    <section class="me">
+        <div class="inner">
+            <a class="btn-close" href="">
+                <span class="icon-thin-remove"></span>
+            </a>
+            <figure class="lines">
+                <img src="css/assets/me.jpg">
+            </figure>
+            <h1>Will Dawson</h1>
+            <p>I'm a Web Designer &amp; Developer living in beautiful Sydney, Australia.</p>
+
+            <div class="button-group">
+                <a class="btn-primary">Twitter</a>
+                <a class="btn-primary">Dribbble</a>
+                <a class="btn-primary">LinkedIn</a>
+            </div>
+        </div>
+    </section>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
+    <script src="js/main.js"></script>
+
 </body>
 </html>
